--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,8 +3,10 @@
     display: flex;
     text-align: center;
     flex-direction: column-reverse;
-    background-image: url("/prototyp-next.js/Hintergrund1.png");
+    background-image: url("/Hintergrund1.png");
     height: 600px;
+    max-width: 100%;
+    max-height: 100%;
 }
 .willkommen {
     position: relative;
