--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,8 +5,7 @@
     flex-direction: column-reverse;
     background-image: url("../public/Hintergrund1.png");
     height: 600px;
-    max-width: 100%;
-    max-height: 100%;
+    background-size: cover;
 }
 .willkommen {
     position: relative;
@@ -22,6 +21,9 @@
 }
 .circleSVG{
     margin: auto auto -130px;
+    xmlns: "http://www.w3.org/2000/svg";
+    width: 180px;
+    height: 20px;
 }
 .circle1{
     cx: 90;
