--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -1,16 +1,16 @@
 /*Gerne auch FLOAT vermeiden. Das ist nur umständlich und super easy durch "flexbox" oder "grid" zu ersetzen*/
-
+.xaplingBalken{
+    display: flex;
+}
 .gruenerBalken {
     height: 10px;
-    width: 50%;
+    width: 100%;
     background-color: #A2C554;
-    float: left;
 }
 .blauerBalken {
     height: 10px;
-    width: 50%;
+    width: 100%;
     background-color: #66B6C1;
-    float: right;
 }
 .buttonLogo {
     background: rgba(0, 0, 0, 0.0);
@@ -32,7 +32,8 @@
     margin-top: -83px;
     margin-bottom: 30px;
     list-style-type: none;
-    padding-right: 50px
+    padding-right: 50px;
+    padding-bottom: 10px;
 }
 .itemNav {
     color: #A2C554;
@@ -43,7 +44,6 @@
     line-height: normal;
     text-decoration: none;
     padding-top: 20px;
-    padding-bottom: 10px;
 }
 .itemNavSelected {
     color: #66B6C1;
@@ -54,7 +54,6 @@
     line-height: normal;
     text-decoration: none;
     padding-top: 20px;
-    padding-bottom: 10px;
 }
 
 /*Footer*/
